docker maven + jdk